outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-27_14-02-48/evaluations/problem_eval6874517738286595524_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of local and global costs based on the ratio of remaining unvisited nodes to the total number of nodes, and introduces a penalty term for nodes that are not on the direction towards the destination node.}
                                                                                                                                                                                                                          ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of local and global costs based on the ratio of remaining unvisited nodes to the total number of nodes, and introduces a penalty term for nodes that are not on the direction towards the destination node.}
                                                                                                                                                                                                                          ^
SyntaxError: unmatched '}'
